# angelspeech

./: .gitignore  Cargo.toml  README.md
settings/: kai.json  pseudochinese.json
src/: convert.rs  language.rs  lib.rs  mora.rs  params.rs  pattern.rs  resources.rs  rules.rs  tests.rs  traits.rs  types.rs
src/bak/: default-settings.bak  reset-settings.sh
src/category_based/: empty.rs  generator.rs  mod.rs  params.rs  pattern.rs  random.rs  words.rs
src/common/: deref.rs  distribution.rs  from.rs  from_row.rs  from_str.rs  mod.rs  sqlx.rs
src/generator/: generator.rs  io_file.rs  mod.rs  pattern.rs  pseudotext.rs  random.rs  random_generators.rs  simple_rules.rs  tests.rs  text_generator.rs  word.rs  words.rs
src/lang/: dict.rs  language.rs  mod.rs  morphology.rs  phonology.rs  traits.rs  word.rs
src/resources/: ipa.rs
src/settings/: karta.json
src/utils/: anagram.rs  convert.rs  ipa_query.rs  mod.rs  tests.rs
