[package]
name = "angelspeech"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
bimap = { version = "0.6.2", features = ["serde"] }
chrono = "0.4.22"
rand = "0.8.5"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
thiserror = "2.0.18"
