[package]
name = "angelspeech"
version = "0.2.0"
edition = "2024"
description = "A toolkit for generating artificial language resources"
repository = "https://github.com/taernsietr/angelspeech"
license = "GPLv3"

[lints.rust]
dead_code = "allow"

[dependencies]
anyhow = "1.0.102"
bimap = { version = "0.6.2", features = ["serde"] }
chrono = "0.4.22"
rand = "0.10.1"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0.8.6", features = ["json", "postgres"] }
thiserror = "2.0.18"
